--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,33 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <!--
-    <ImageView
-        android:id="@+id/photo_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:contentDescription="@string/photo_view_description"/>
-        -->
 
-    <jp.ac.titech.itpro.sdl.photonotes.ZoomableImageView
-        android:id="@+id/photo_view"
+    <ListView
+        android:id="@+id/photo_list_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
+
+    <View
+        android:id="@+id/divider"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:contentDescription="@string/photo_view_description" />
+        android:layout_height="5dp"
+        android:background="?android:attr/listDivider" />
 
     <Button
-        android:id="@+id/photo_button"
+        android:id="@+id/new_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/photo_button_label" />
+        android:text="@string/new_button_label" />
+
 
 </LinearLayout>
