--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,10 @@
 <resources>
     <dimen name="activity_padding">16dp</dimen>
     <dimen name="widget_margin">16dp</dimen>
+
+    <dimen name="activity_horizontal_margin">8dp</dimen>
+    <dimen name="activity_vertical_margin">8dp</dimen>
+    <dimen name="text_size">20sp</dimen>
+    <dimen name="content_font_size">20sp</dimen>
+    <dimen name="label_width">180dp</dimen>
 </resources>
